# cmake-stm32g4-ll

./: .gitignore  LICENSE  README.md  update_vendor.sh
cmake/: stm32-gcc.cmake  stm32g4-ll.cmake
example/: CMakeLists.txt  STM32G431KBTx_FLASH.ld  main.c
